syntax = "proto3";

import "google/protobuf/wrappers.proto";

package taska.proto.card;

message CreateCardReq {
  string list_id = 1;
  string title = 2;
  google.protobuf.StringValue description = 3;
}
message CreateCardRes {
}
message ArchiveCardReq {
}
message ArchiveCardRes {
}
message UnArchiveCardReq {
}
message UnArchiveCardRes {
}
message UpdateCardReq {
}
message UpdateCardRes {
}

service CardService {
  rpc Create (CreateCardReq) returns (CreateCardRes);
  rpc Archive (ArchiveCardReq) returns (ArchiveCardRes);
  rpc UnArchive (UnArchiveCardReq) returns (UnArchiveCardRes);
  rpc Update (UpdateCardReq) returns (UpdateCardRes);
}